Duyen adjusted giao dien compress page

--- a/snapeditvn-clone/src/pages/compress-image/index.html
+++ b/snapeditvn-clone/src/pages/compress-image/index.html
@@ -74,6 +74,7 @@
           <p>Ctrl + V để dán hình ảnh</p>
           <hr class="hr_1">
           <p>Không có hình ảnh? Thử một trong những cái này</p>
+          <br>
           <figure>
               <img class="hinhref" src="../../../public/images/compress-image/hinhref1.jpg" alt="">
               <img class="hinhref" src="../../../public/images/compress-image/hinhrefer2.jpg" alt="">
@@ -138,18 +139,18 @@
 
           </div>
           <br><br>
-          <div>
-              <div class="nen2_muc1">
-                  <img class="hinhref9" src="../../../public/images/compress-image/hinhref9.webp" alt="">
-              </div>
-              <div class="nen2_muc1">
+          <div>  
+              <div class="nen2_muc2">
                   <h1>Tăng Tốc Độ Truyền Dữ Liệu</h1>
-                  <p>Công cụ nén ảnh của SnapEdit cung cấp giải pháp cho việc kết nối chậm và băng thông hạn chế. Việc
+                  <p class="nen2_p1">Công cụ nén ảnh của SnapEdit cung cấp giải pháp cho việc kết nối chậm và băng thông hạn chế. Việc
                       nén
                       dung lượng ảnh, làm tăng tốc độ truyền dữ liệu, cải thiện giao tiếp và tiết kiệm thời gian.</p>
                   <input type="file" name="uploadfile" id="img" style="display:none;" />
                   <label for="img">Thử ngay <i class="fa-solid fa-arrow-right"></i></label>
               </div>
+              <div class="nen2_muc1">
+                <img class="hinhref9" src="../../../public/images/compress-image/hinhref9.webp" alt="">
+            </div>
           </div>
           <br><br>
           <div>
