--- a/snapeditvn-clone/src/pages/compress-image/Chatbot.html
+++ b/snapeditvn-clone/src/pages/compress-image/Chatbot.html
@@ -94,7 +94,7 @@
 
 <body>
 
-    <h2>Popup Chat Window</h2>
+    <h2>Chat Window</h2>
     <p>Your message:</p>
     <div id="chatMessage" class="border_message">
 
