--- a/snapeditvn-clone/src/pages/compress-image/index.html
+++ b/snapeditvn-clone/src/pages/compress-image/index.html
@@ -20,36 +20,36 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <a href="/home" class="logo">
+                <a href="../home/index.html" class="logo">
                     <img src="../../../public/images/snapedit-logo.svg" alt="SnapEdit Logo" height="40" />
-                </a>
-                <nav class="nav-menu">
+                  </a>
+                  <nav class="nav-menu">
                     <ul>
-                        <li class="dropdown">
-                            <a href="#">Sản phẩm AI <span class="arrow">▼</span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/add-watermark">Thêm Watermark</a></li>
-                                <li><a href="/blur-bg">Làm mờ nền</a></li>
-                                <li><a href="/compress-image">Nén ảnh</a></li>
-                                <li><a href="/convert-image">Chuyển đổi ảnh</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Giá</a></li>
-                    </ul>
-                </nav>
-                <div class="header-actions">
-                    <div class="language-switcher">
-                        <button class="language-btn">
-                            <img src="../../../public/images/favicon.svg" alt="Tiếng Việt" width="20" height="20" />
-                            <span>Tiếng Việt</span>
-                            <span class="arrow">▼</span>
-                        </button>
-                        <ul class="language-menu">
-                            <li><a href="#"><img src="../../assets/images/flags/vi.svg" alt="VI" width="18"
-                                        height="18" /> Tiếng Việt</a></li>
-                            <li><a href="#"><img src="../../assets/images/flags/en.svg" alt="EN" width="18"
-                                        height="18" /> English</a></li>
+                      <li class="dropdown">
+                        <a href="#">Sản phẩm AI <span class="arrow">▼</span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="../add-watermark/index.html">Thêm Watermark</a></li>
+                          <li><a href="../blur-bg/index.html">Làm mờ nền</a></li>
+                          <li><a href="../compress-image/index.html">Nén ảnh</a></li>
+                          <li><a href="../convert-image/index.html">Chuyển đổi ảnh</a></li>
                         </ul>
+                      </li>
+                      <li><a href="#">Giá</a></li>
+                    </ul>
+                  </nav>
+                  <div class="header-actions">
+                    <div class="language-switcher">
+                      <button class="language-btn">
+                        <img class="choose_flag" src="../../../public/images/vnflag.jpg" alt="Tiếng Việt"/>
+                        <span>Tiếng Việt</span>
+                        <span class="arrow">▼</span>
+                      </button>
+                      <ul class="language-menu">
+                        <li><a class="flag" href="#"><img src="../../../public/images/vnflag.jpg" alt="VI"/> Tiếng
+                            Việt</a></li>
+                        <li><a class="flag" href="#"><img src="../../../public/images/usflag.jpg" alt="EN" />
+                            English</a></li>
+                      </ul>
                     </div>
                     <a href="#" class="login-link">Đăng nhập</a>
                     <a href="#" class="btn btn-primary free-btn">Thử miễn phí</a>
@@ -78,11 +78,12 @@
                 <!-- <br><br> -->
                 <!-- <button class="nenanhbutton1"><i class="fa-solid fa-arrow-up-from-bracket"></i> Tải lên hình ảnh</button> -->
                 <div class="buttonHeight">
-                    <input type="file" name="uploadfile" id="img" style="display:none;" /> 
-                    <label class="nenanhbutton1" for="img"> <i class="fa-solid fa-arrow-up-from-bracket"></i> Tải lên hình ảnh</label>
+                    <input type="file" name="uploadfile" id="img" style="display:none;" />
+                    <label class="nenanhbutton1" for="img"> <i class="fa-solid fa-arrow-up-from-bracket"></i> Tải lên
+                        hình ảnh</label>
                 </div>
-                
-                
+
+
                 <p>Hoặc chỉ cần thả vào đây</p>
                 <p>Ctrl + V để dán hình ảnh</p>
                 <hr class="hr_1">
@@ -144,7 +145,8 @@
                                 <label for="tryInput">Thử ngay <i class="fa-solid fa-arrow-right"></i></label>
                                 <div class="fakefile">
                                     <input style="display: none;" />
-                                    <img src="../../../public/images/compress-image/hinhref8.webp" style="display: none;" />
+                                    <img src="../../../public/images/compress-image/hinhref8.webp"
+                                        style="display: none;" />
                                 </div>
                             </div>
                         </div>
@@ -365,7 +367,7 @@
                     <div class="footer-column">
                         <h4>Hỗ trợ</h4>
                         <ul>
-                            <li><a href="/help">Trung tâm trợ giúp</a></li>
+                            <li><a href="Chatbot.html" target="_blank">Trung tâm trợ giúp</a></li>
                             <li><a href="/faq">Câu hỏi thường gặp</a></li>
                             <li><a href="/privacy">Chính sách bảo mật</a></li>
                             <li><a href="/terms">Điều khoản sử dụng</a></li>
