--- a/snapeditvn-clone/src/pages/home/index.html
+++ b/snapeditvn-clone/src/pages/home/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SnapEdit - Chỉnh sửa ảnh AI trực tuyến</title>
-  <meta name="description" content="Chỉnh sửa ảnh online miễn phí với các công cụ AI chuyên nghiệp. Thêm watermark, làm mờ nền, nén ảnh và chuyển đổi định dạng ảnh dễ dàng.">
+  <meta name="description"
+    content="Chỉnh sửa ảnh online miễn phí với các công cụ AI chuyên nghiệp. Thêm watermark, làm mờ nền, nén ảnh và chuyển đổi định dạng ảnh dễ dàng.">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!-- Header -->
   <header class="header">
     <div class="container">
       <div class="header-content">
-        <a href="/" class="logo">
-          <img src="../../assets/images/logo.svg" alt="SnapEdit Logo" height="40"/>
+        <a href="../home/index.html" class="logo">
+          <img src="../../../public/images/snapedit-logo.svg" alt="SnapEdit Logo" height="40" />
         </a>
         <nav class="nav-menu">
           <ul>
             <li class="dropdown">
               <a href="#">Sản phẩm AI <span class="arrow">▼</span></a>
               <ul class="dropdown-menu">
-                <li><a href="/add-watermark">Thêm Watermark</a></li>
-                <li><a href="/blur-bg">Làm mờ nền</a></li>
-                <li><a href="/compress-image">Nén ảnh</a></li>
-                <li><a href="/convert-image">Chuyển đổi ảnh</a></li>
+                <li><a href="../add-watermark/index.html">Thêm Watermark</a></li>
+                <li><a href="../blur-bg/index.html">Làm mờ nền</a></li>
+                <li><a href="../compress-image/index.html">Nén ảnh</a></li>
+                <li><a href="../convert-image/index.html">Chuyển đổi ảnh</a></li>
               </ul>
             </li>
             <li><a href="#">Giá</a></li>
@@ -32,13 +35,15 @@
         <div class="header-actions">
           <div class="language-switcher">
             <button class="language-btn">
-              <img src="../../assets/images/flags/vi.svg" alt="Tiếng Việt" width="20" height="20"/>
+              <img src="../../../public/images/vnflag.jpg" alt="Tiếng Việt" width="20" height="20" />
               <span>Tiếng Việt</span>
               <span class="arrow">▼</span>
             </button>
             <ul class="language-menu">
-              <li><a href="#"><img src="../../assets/images/flags/vi.svg" alt="VI" width="18" height="18"/> Tiếng Việt</a></li>
-              <li><a href="#"><img src="../../assets/images/flags/en.svg" alt="EN" width="18" height="18"/> English</a></li>
+              <li><a href="#"><img src="../../../public/images/vnflag.jpg" alt="VI" width="18" height="18" /> Tiếng
+                  Việt</a></li>
+              <li><a href="#"><img src="../../../public/images/usflag.jpg" alt="EN" width="18" height="18" />
+                  English</a></li>
             </ul>
           </div>
           <a href="#" class="login-link">Đăng nhập</a>
@@ -54,7 +59,9 @@
       <div class="container">
         <div class="hero-content">
           <h1>Chỉnh sửa ảnh<br>Trực tuyến<br>Với công cụ AI</h1>
-          <p>SnapEdit là trang <b>web chỉnh sửa ảnh online</b> cung cấp các công cụ AI giúp edit hình ảnh trên máy tính và điện thoại dễ dàng, nhanh chóng. Hãy thử ngay và xem AI biến đổi hình ảnh của bạn trong một vài nhấp chuột!</p>
+          <p>SnapEdit là trang <b>web chỉnh sửa ảnh online</b> cung cấp các công cụ AI giúp edit hình ảnh trên máy tính
+            và điện thoại dễ dàng, nhanh chóng. Hãy thử ngay và xem AI biến đổi hình ảnh của bạn trong một vài nhấp
+            chuột!</p>
           <a href="#" class="btn btn-primary">Bắt đầu miễn phí</a>
         </div>
         <div class="hero-image">
@@ -181,4 +188,5 @@
     </div>
   </footer>
 </body>
+
 </html>
